--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         
             <div class="hero">
                 <img src="images/pexels-vie-studio-6167872.jpg" 
-                 alt="skincare products">
+                 alt="skincare">
             </div>
             <article>
                 <h3>About Our Blog</h3>
